hphp/hack/test/typecheck/gen5.php.exp
File "gen5.php", line 22, characters 17-17:
Some type constraint(s) here are violated (Typing[4110])
File "gen5.php", line 12, characters 9-9:
'T' is a constrained type
File "gen5.php", line 12, characters 14-14:
This is an object of type B
File "gen5.php", line 22, characters 19-19:
It is incompatible with an object of type Z
